--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -9,12 +9,8 @@
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 5rem;
+  overflow-y: scroll;
 }
 
 .footer {
@@ -118,4 +114,8 @@
     width: 100%;
     flex-direction: column;
   }
+}
+
+ul.album-list {
+  margin-top: 50px;
 }
